<resources>
    <string name="app_name">FarmEase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="location_permission_message">To continue, please allow us to access your location.</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="location_icon">Location Icon</string>
</resources>