<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:src="@drawable/baseline_location_on_24"
        android:contentDescription="@string/location_icon"
        app:tint="@color/orange" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_location_access"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_permission_message"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/deny"
            android:backgroundTint="@color/gray_light"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
